--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@nestjs/core": "^10.3.7",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.3.7",
-    "@prisma/client": "^5.12.1",
+    "@nestjs/swagger": "^7.3.1",
+    "@prisma/client": "^5.13.0",
     "npm-check-updates": "^16.14.18",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
