--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.3.7",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.13.0",
+    "class-validator": "^0.14.1",
     "npm-check-updates": "^16.14.18",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
