--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.13.0",
     "class-validator": "^0.14.1",
+    "fs": "^0.0.1-security",
     "npm-check-updates": "^16.14.18",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
